tests/ui/endpoint/non_custom_method_attribute.stderr
error: `method` can only be used on custom endpoints
 --> tests/ui/endpoint/non_custom_method_attribute.rs:8:12
  |
8 | #[read_all(method = "gotham_restful::gotham::hyper::Method::GET")]
  |            ^^^^^^

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> tests/ui/endpoint/non_custom_method_attribute.rs:5:12
  |
4 | #[derive(Resource)]
  |                  - help: you might be missing a type parameter: `<read_all___gotham_restful_endpoint>`
5 | #[resource(read_all)]
  |            ^^^^^^^^ not found in this scope
